--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                       <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-2">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo3.jpg" alt="FRONT-PAGE-PHOTO-3">
+                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-3">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
                       <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-4">
@@ -118,7 +118,7 @@
                       <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-5">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo3.jpg" alt="FRONT-PAGE-PHOTO-6">
+                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-6">
                     </div>
                 </div>
           </div>
