--- a/index.html
+++ b/index.html
@@ -124,6 +124,43 @@
                 </div>
           </div>
         </section>
+        <section id="contact" class="contact grid-item dark">
+          <h1>KONTAKT</h1>
+          <div class="contact-cards">
+          <div class="info-holder">
+            <div class="left-info-content"><i class="fas fa-map-marker-alt fa-3x"></i></div>
+            <div class="right-info-content">
+              <p>Polska</p>
+            </div>
+            </div>
+
+            <div class="info-holder">
+              <div class="left-info-content"><i class="fas fa-phone fa-3x"></i></div>
+              <div class="right-info-content">
+                <p>+48 665544997</p>
+              </div>
+              </div>
+
+              <div class="info-holder">
+                <div class="left-info-content"><i class="fal fa-envelope fa-3x"></i></div>
+                <div class="right-info-content">
+                  <p>example@example.com</p>
+                </div>
+                </div>
+              </div>
+
+              <section class="grid-item contact-form">
+                <form action="#" class="contact-form">
+                  <input type="text" class="nameZone" placeholder="Your Full Name">
+                  <input type="email" class="emailZone" placeholder="Your Email">
+                  <input type="text" class="subjectZone" placeholder="Subject">
+                  <textarea class="messageZone" placeholder="Message"></textarea>
+                  <input type="submit" value="Send Message" class="btn">
+                </form>
+              </section>
+
+        </section>
+
         <footer class="grid-item">
           <div class="top-footer">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4359.889876963988!2d20.028893005385196!3d49.476836765826455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1600257358973!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
