--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </section>
         <section id="contact" class="contact grid-item dark">
           <h1>KONTAKT</h1>
+          <div class="myborder"></div>
           <div class="contact-cards">
           <div class="info-holder">
             <div class="left-info-content"><i class="fas fa-map-marker-alt fa-3x"></i></div>
@@ -151,11 +152,11 @@
 
               <section class="grid-item contact-form">
                 <form action="#" class="contact-form">
-                  <input type="text" class="nameZone" placeholder="Your Full Name">
-                  <input type="email" class="emailZone" placeholder="Your Email">
-                  <input type="text" class="subjectZone" placeholder="Subject">
-                  <textarea class="messageZone" placeholder="Message"></textarea>
-                  <input type="submit" value="Send Message" class="btn">
+                  <input type="text" class="nameZone" placeholder="Imię">
+                  <input type="email" class="emailZone" placeholder="E-Mail">
+                  <input type="text" class="subjectZone" placeholder="Temat">
+                  <textarea class="messageZone" placeholder="Wiadomość"></textarea>
+                  <input type="submit" value="Wyślij" class="btn">
                 </form>
               </section>
 
