--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
 
         </section>
 
+        <div class="goTop "><i class="fas fa-arrow-up goTop"></i></div>
+
         <footer class="grid-item">
           <div class="top-footer">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4359.889876963988!2d20.028893005385196!3d49.476836765826455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1600257358973!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -179,7 +181,6 @@
     <script src="scripts/jquery.js"></script>
     <script src="scripts/popper.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
-    <script src="scripts/script.js"></script>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
