--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Energia - Home</title>
+    <!-- Styles -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- My Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
-<body>
-    <div class="grid-container m-auto">
+    <body>
         <!-- Menu -->
         <nav class="grid-item">
             <a href="" class="logo">SolarEnergia</a>
@@ -30,6 +31,8 @@
             </div>
         </nav>
         <!-- Menu -->
+
+        <!-- Baner -->
         <header id="home" class="grid-item">
             <div class="text-holder">
                 <h1>Lorem ipsum dolor sit amet.</h1>
@@ -42,145 +45,164 @@
                 </a> 
             </span>
         </header>
-        <!-- Header -->
+        <!-- Baner -->
+
+        <!-- About -->
         <main id="main" class="grid-item">
             <div class="energy">
                 <div class="photo"><img src="img/photo1.png"></div>
                 <div class="desc">
-                  <h1>Lorem</h1>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque iure, officiis exercitationem explicabo laborum quasi ipsa consequatur alias obcaecati nemo possimus ea esse repellendus quam non fugiat neque repellat ipsam, ab voluptate, nesciunt quod eius? Sunt voluptatibus molestias et impedit!</p>
-                  <a href="#">Read more.</a>
+                <h1>Lorem</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque iure, officiis exercitationem explicabo laborum quasi ipsa consequatur alias obcaecati nemo possimus ea esse repellendus quam non fugiat neque repellat ipsam, ab voluptate, nesciunt quod eius? Sunt voluptatibus molestias et impedit!</p>
+                <a href="#">Read more.</a>
                 </div>
-              </div>
-              <div class="energy right dark">
+            </div>
+            <div class="energy right dark">
                 <div class="photo"><img src="img/photo2.jpg"></div>
                 <div class="desc">
-                  <h1>Ipsum</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
-                  <a href="#">Read more.</a>
+                <h1>Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
+                <a href="#">Read more.</a>
                 </div>
-              </div>
-              <div class="energy">
+            </div>
+            <div class="energy">
                 <div class="photo"><img src="img/photo3.jpg"></div>
                 <div class="desc">
-                  <h1>Lorem</h1>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi alias, quia eaque facilis incidunt in ducimus rerum mollitia. Ut perspiciatis asperiores et maiores eum veniam consectetur ducimus laboriosam dolor.</p>
-                  <a href="#">Read more.</a>
+                <h1>Lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi alias, quia eaque facilis incidunt in ducimus rerum mollitia. Ut perspiciatis asperiores et maiores eum veniam consectetur ducimus laboriosam dolor.</p>
+                <a href="#">Read more.</a>
                 </div>
-              </div>
+            </div>
         </main>
+        <!-- About -->
+
+        <!-- Blog -->
         <aside id="blog" class="grid-item dark">
             <h1 class="section-title">Blog</h1>
             <div class="myborder"></div>
                 <!-- Article 1 -->
                 <article>
-                  <div style="background-image: url(img/photo1.png); background-size: cover;" class="article-content">
+                <div style="background-image: url(img/photo1.png); background-size: cover;" class="article-content">
                     <div class="slider">
-                      <h1>Lorem</h1>
+                    <h1>Lorem</h1>
                     </div>
                     <div class="info">
                     <h1>Lorem</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio in, explicabo consequatur aliquid ea repellat quo labore dicta aliquam eos vel, obcaecati error? Magni mollitia eius, saepe animi fuga ducimus, officia ipsum explicabo, eveniet maxime ratione et aperiam veritatis. Nam!</p>
                     <a href="">Czytaj dalej</a>
                     </div>
-                  </div>
+                </div>
                     <!-- Article 1 -->
                     <div style="background-image: url(img/photo2.jpg); background-size: cover;" class="article-content">
-                      <div class="slider">
+                    <div class="slider">
                         <h1>Ipsum</h1>
-                      </div>
-                      <div class="info">
-                      <h1>Ipsum</h1>
-                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam totam rem libero, tempora quo, expedita sequi fuga illum quasi harum ex magnam eveniet delectus magni?</p>
-                      <a href="">Czytaj dalej</a>
-                      </div>
+                    </div>
+                    <div class="info">
+                    <h1>Ipsum</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam totam rem libero, tempora quo, expedita sequi fuga illum quasi harum ex magnam eveniet delectus magni?</p>
+                    <a href="">Czytaj dalej</a>
+                    </div>
                     </div>
                 </article>
-              <a href="articles.html" class="see-all">Zobacz wszystkie artykuły.</a>
+            <a href="articles.html" class="see-all">Zobacz wszystkie artykuły.</a>
         </aside>
-        <section class="grid-item gallery">
-          <div class="container-fluid">
-              <h1>GALERIA</h1>
-              <div class="myborder"></div>
+        <!-- Blog -->
+
+        <!-- Gallery -->
+        <section id="gallery" class="grid-item gallery">
+            <div class="container-fluid">
+                <h1>GALERIA</h1>
+                <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-1">
+                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-1">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-2">
+                        <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-2">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-3">
+                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-3">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-4">
+                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-4">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-5">
+                        <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-5">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                      <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-6">
+                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-6">
                     </div>
                 </div>
-          </div>
+            </div>
         </section>
+        <!-- Gallery -->
+
+        <!-- Contact -->
         <section id="contact" class="contact grid-item dark">
-          <h1>KONTAKT</h1>
-          <div class="myborder"></div>
-          <div class="contact-cards">
-          <div class="info-holder">
-            <div class="left-info-content"><i class="fas fa-map-marker-alt fa-3x"></i></div>
-            <div class="right-info-content">
-              <p>Polska</p>
-            </div>
-            </div>
 
-            <div class="info-holder">
-              <div class="left-info-content"><i class="fas fa-phone fa-3x"></i></div>
-              <div class="right-info-content">
-                <p>+48 665544997</p>
-              </div>
-              </div>
+            <h1>KONTAKT</h1>
+            <div class="myborder"></div>
 
-              <div class="info-holder">
-                <div class="left-info-content"><i class="fal fa-envelope fa-3x"></i></div>
-                <div class="right-info-content">
-                  <p>example@example.com</p>
+            <div class="contact-cards">
+                <div class="info-holder">
+                    <div class="left-info-content"><i class="fas fa-map-marker-alt fa-3x"></i></div>
+                    <div class="right-info-content">
+                        <p>Polska</p>
+                    </div>
                 </div>
-                </div>
-              </div>
 
-              <section class="grid-item contact-form">
+                <div class="info-holder">
+                    <div class="left-info-content"><i class="fas fa-phone fa-3x"></i></div>
+                    <div class="right-info-content">
+                        <p>+48 665544997</p>
+                    </div>
+                </div>
+
+                <div class="info-holder">
+                    <div class="left-info-content"><i class="fal fa-envelope fa-3x"></i></div>
+                    <div class="right-info-content">
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <section class="grid-item contact-form">
                 <form action="#" class="contact-form">
-                  <input type="text" class="nameZone" placeholder="Imię">
-                  <input type="email" class="emailZone" placeholder="E-Mail">
-                  <input type="text" class="subjectZone" placeholder="Temat">
-                  <textarea class="messageZone" placeholder="Wiadomość"></textarea>
-                  <input type="submit" value="Wyślij" class="btn">
+                    <input type="text" class="nameZone" placeholder="Imię">
+                    <input type="email" class="emailZone" placeholder="E-Mail">
+                    <input type="text" class="subjectZone" placeholder="Temat">
+                    <textarea class="messageZone" placeholder="Wiadomość"></textarea>
+                    <input type="submit" value="Wyślij" class="btn">
                 </form>
-              </section>
-
+            </section>
         </section>
+        <!-- Contact -->
 
+        <!-- GoTop -->
         <div class="goTop "><i class="fas fa-arrow-up goTop"></i></div>
+        <!-- GoTop -->
 
+        <!-- Footer -->
         <footer class="grid-item">
-          <div class="top-footer">
+            <div class="top-footer">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4359.889876963988!2d20.028893005385196!3d49.476836765826455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1600257358973!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="icons">
-              <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-              <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#"><i class="fab fa-snapchat fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fab fa-snapchat fa-2x"></i></a>
             </div>
-          </div>
-          <div class="bottom-footer">
+            </div>
+            <div class="bottom-footer">
             <p>2020 &#169; <a href="https://itcrowd.net.pl/" target="_blank">IT CROWD</a> | Szymon Gutt</p>
-          </div>
+            </div>
         </footer>
-    </div>
-    <script src="scripts/jquery.js"></script>
-    <script src="scripts/popper.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
-    <script src="scripts/scripts.js"></script>
-</body>
+        <!-- Footer -->
+
+        <!-- Scripts -->
+        <script src="scripts/jquery.js"></script>
+        <script src="scripts/popper.js"></script>
+        <script src="scripts/bootstrap.min.js"></script>
+        <!-- MyScripts -->
+        <script src="scripts/scripts.js"></script>
+    </body>
 </html>
