--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- About -->
         <main id="main" class="grid-item">
             <div class="energy">
-                <div class="photo"><img src="img/photo1.png"></div>
+                <div class="photo"><img src="img/photo1.png" alt="ENERGIA-WIATROWA"></div>
                 <div class="desc">
                 <h1>Lorem</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque iure, officiis exercitationem explicabo laborum quasi ipsa consequatur alias obcaecati nemo possimus ea esse repellendus quam non fugiat neque repellat ipsam, ab voluptate, nesciunt quod eius? Sunt voluptatibus molestias et impedit!</p>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="energy right dark">
-                <div class="photo"><img src="img/photo2.jpg"></div>
+                <div class="photo"><img src="img/photo2.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
                 <h1>Ipsum</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="energy">
-                <div class="photo"><img src="img/photo3.jpg"></div>
+                <div class="photo"><img src="img/photo3.jpg" alt="OSWIETLENIA-SOLARNE"></div>
                 <div class="desc">
                 <h1>Lorem</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi alias, quia eaque facilis incidunt in ducimus rerum mollitia. Ut perspiciatis asperiores et maiores eum veniam consectetur ducimus laboriosam dolor.</p>
