--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Strona SolarEnergia">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Szymon Gutt">
-    <title>Solar Energia - Home</title>
+    <title>SolarEnergia - Odnawialne źródła energii - Home</title>
     <!-- Styles -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/normalize.css">
