--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="energy">
                 <div class="photo"><img src="img/photo1.png" alt="ENERGIA-WIATROWA"></div>
                 <div class="desc">
-                <h1>Lorem</h1>
+                <span>Lorem</span>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque iure, officiis exercitationem explicabo laborum quasi ipsa consequatur alias obcaecati nemo possimus ea esse repellendus quam non fugiat neque repellat ipsam, ab voluptate, nesciunt quod eius? Sunt voluptatibus molestias et impedit!</p>
                 <a href="#">Read more.</a>
                 </div>
@@ -63,7 +63,7 @@
             <div class="energy right dark">
                 <div class="photo"><img src="img/photo2.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
-                <h1>Ipsum</h1>
+                <span>Ipsum<span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
                 <a href="#">Read more.</a>
                 </div>
@@ -71,8 +71,8 @@
             <div class="energy">
                 <div class="photo"><img src="img/photo3.jpg" alt="OSWIETLENIA-SOLARNE"></div>
                 <div class="desc">
-                <h1>Lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi alias, quia eaque facilis incidunt in ducimus rerum mollitia. Ut perspiciatis asperiores et maiores eum veniam consectetur ducimus laboriosam dolor.</p>
+                <span>Lorem</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore blanditiis natus amet, totam aperiam similique deserunt at maiores perspiciatis, possimus dolorum vero qui deleniti praesentium sunt cupiditate a. Sapiente cupiditate illum, minima modi facilis, ea maxime labore nostrum quidem eaque mollitia dolorum repellat magnam molestiae exercitationem corrupti libero, non eveniet?</p>
                 <a href="#">Read more.</a>
                 </div>
             </div>
@@ -81,28 +81,28 @@
 
         <!-- Blog -->
         <aside id="blog" class="grid-item dark">
-            <h1 class="section-title">Blog</h1>
+            <span class="section-title">Blog</span>
             <div class="myborder"></div>
                 <!-- Article 1 -->
                 <article>
                 <div style="background-image: url(img/photo1.png); background-size: cover;" class="article-content">
                     <div class="slider">
-                    <h1>Lorem</h1>
+                    <span>Lorem</span>
                     </div>
                     <div class="info">
-                    <h1>Lorem</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio in, explicabo consequatur aliquid ea repellat quo labore dicta aliquam eos vel, obcaecati error? Magni mollitia eius, saepe animi fuga ducimus, officia ipsum explicabo, eveniet maxime ratione et aperiam veritatis. Nam!</p>
+                    <span>Lorem</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, corporis cupiditate voluptatibus magnam maxime incidunt ratione impedit exercitationem at sunt blanditiis ipsum, nemo odit praesentium qui a ad molestias officia architecto, delectus iure in cumque tempore facere! Possimus voluptatibus aliquid laboriosam dolor eveniet quos, ab provident modi inventore libero tempore atque quam accusantium laborum sapiente, id vero tenetur odio at repellendus recusandae? Eligendi minima reiciendis voluptate delectus veniam magnam incidunt!</p>
                     <a href="">Czytaj dalej</a>
                     </div>
                 </div>
                     <!-- Article 1 -->
                     <div style="background-image: url(img/photo2.jpg); background-size: cover;" class="article-content">
                     <div class="slider">
-                        <h1>Ipsum</h1>
+                        <span>Ipsum</span>
                     </div>
                     <div class="info">
-                    <h1>Ipsum</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam totam rem libero, tempora quo, expedita sequi fuga illum quasi harum ex magnam eveniet delectus magni?</p>
+                    <span>Ipsum</span>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur deleniti architecto modi, expedita labore delectus harum inventore consequatur nemo molestiae maiores iste distinctio quidem aliquam, illo exercitationem deserunt eius. Velit similique, suscipit tenetur aliquid magni iure recusandae totam expedita dolorem autem ex possimus reiciendis. Quasi distinctio laborum magni enim, aperiam amet molestiae modi iusto quidem corrupti et sapiente tenetur esse!</p>
                     <a href="">Czytaj dalej</a>
                     </div>
                     </div>
@@ -114,7 +114,7 @@
         <!-- Gallery -->
         <section id="gallery" class="grid-item gallery">
             <div class="container-fluid">
-                <h1>GALERIA</h1>
+                <span>GALERIA</span>
                 <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
@@ -143,7 +143,7 @@
         <!-- Contact -->
         <section id="contact" class="contact grid-item dark">
 
-            <h1>KONTAKT</h1>
+            <span>KONTAKT</span>
             <div class="myborder"></div>
 
             <div class="contact-cards">
