--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="energy right dark">
                 <div class="photo"><img src="img/photo2.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
-                <span>Ipsum<span>
+                <span>Ipsum</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
                 <a href="#">Read more.</a>
                 </div>
@@ -114,7 +114,7 @@
         <!-- Gallery -->
         <section id="gallery" class="grid-item gallery">
             <div class="container-fluid">
-                <span>GALERIA</span>
+                <h1>GALERIA</h1>
                 <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
