--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     </div>
                 </article>
-            <a href="articles.html" class="see-all">Zobacz wszystkie artykuły.</a>
+            <a href="#" class="see-all">Zobacz wszystkie artykuły.</a>
         </aside>
         <!-- Blog -->
 
