--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,7 +114,7 @@
         <!-- Gallery -->
         <section id="gallery" class="grid-item gallery">
             <div class="container-fluid">
-                <h1>GALERIA</h1>
+                <h2>GALERIA</h2>
                 <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
