--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Strona SolarEnergia">
+    <meta name="description" content="SolarEnergia - Odnawialne źródła energii, Elektrownie Wiatrowe, Biogazownie.">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Szymon Gutt">
     <title>SolarEnergia - Odnawialne źródła energii - Home</title>
