--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="info">
                     <span>Lorem</span>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, corporis cupiditate voluptatibus magnam maxime incidunt ratione impedit exercitationem at sunt blanditiis ipsum, nemo odit praesentium qui a ad molestias officia architecto, delectus iure in cumque tempore facere! Possimus voluptatibus aliquid laboriosam dolor eveniet quos, ab provident modi inventore libero tempore atque quam accusantium laborum sapiente, id vero tenetur odio at repellendus recusandae? Eligendi minima reiciendis voluptate delectus veniam magnam incidunt!</p>
-                    <a href="">Czytaj dalej</a>
+                    <a href="article.html">Czytaj dalej</a>
                     </div>
                 </div>
                     <!-- Article 1 -->
