--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Lorem ipsum dolor sit amet.</h1>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
             </div>
-            <span class="arrowbox">
+            <span class="arrowbox" href="#main">
                 <a href="#main">
                     <span class="napis">O NAS</span>
                     <div class="arrow"><i class="fas fa-chevron-down"></i></div>
