--- a/articles.html
+++ b/articles.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- My Styles -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <!-- Menu -->
@@ -34,4 +32,54 @@
         </div>
     </nav>
     <!-- Menu -->
+    <!-- Article 1 -->
+    <section class="articles">
+        <div style="background-image: url(img/photo1.png); background-size: cover;" class="article-content">
+            <div class="slider">
+            <span>Lorem</span>
+            </div>
+            <div class="info">
+            <span>Lorem</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, corporis cupiditate voluptatibus magnam maxime incidunt ratione impedit exercitationem at sunt blanditiis ipsum, nemo odit praesentium qui a ad molestias officia architecto, delectus iure in cumque tempore facere! Possimus voluptatibus aliquid laboriosam dolor eveniet quos, ab provident modi inventore libero tempore atque quam accusantium laborum sapiente, id vero tenetur odio at repellendus recusandae? Eligendi minima reiciendis voluptate delectus veniam magnam incidunt!</p>
+            <a href="article.html">Czytaj dalej</a>
+            </div>
+        </div>
+        <!-- Article 2 -->
+        <div style="background-image: url(img/photo2.jpg); background-size: cover;" class="article-content">
+            <div class="slider">
+                <span>Ipsum</span>
+            </div>
+            <div class="info">
+            <span>Ipsum</span>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur deleniti architecto modi, expedita labore delectus harum inventore consequatur nemo molestiae maiores iste distinctio quidem aliquam, illo exercitationem deserunt eius. Velit similique, suscipit tenetur aliquid magni iure recusandae totam expedita dolorem autem ex possimus reiciendis. Quasi distinctio laborum magni enim, aperiam amet molestiae modi iusto quidem corrupti et sapiente tenetur esse!</p>
+            <a href="">Czytaj dalej</a>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer class="grid-item">
+        <div class="top-footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4359.889876963988!2d20.028893005385196!3d49.476836765826455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1600257358973!5m2!1spl!2spl" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div class="icons">
+            <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+            <a href="#"><i class="fab fa-snapchat fa-3x"></i></a>
+        </div>
+        </div>
+        <div class="bottom-footer">
+        <p>2020 &#169; <a href="https://itcrowd.net.pl/" target="_blank">IT CROWD</a> | Szymon Gutt</p>
+        </div>
+    </footer>
+    <!-- Footer -->
+    
+    <!-- GoTop -->
+    <div class="goTop "><i class="fas fa-arrow-up goTop"></i></div>
+    <!-- GoTop -->
+
+    <!-- Scripts -->
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/popper.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <!-- MyScripts -->
+    <script src="scripts/scripts.js"></script>
 </body>
