--- a/article.html
+++ b/article.html
@@ -24,11 +24,11 @@
             <span></span>
         </button>
         <div class="navbar-menu">
-            <a href="#home">Strona główna</a>
-            <a href="#main">O nas</a>
-            <a href="#blog">Blog</a>
-            <a href="#gallery">Galeria</a>
-            <a href="#contact">Kontakt</a>
+            <a href="index.html#home">Strona główna</a>
+            <a href="index.html#main">O nas</a>
+            <a href="index.html#blog">Blog</a>
+            <a href="index.html#gallery">Galeria</a>
+            <a href="index.html#contact">Kontakt</a>
         </div>
     </nav>
     <!-- Menu -->
