--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- Contact -->
 
         <!-- GoTop -->
-        <div class="goTop "><i class="fas fa-arrow-up goTop"></i></div>
+        <button id="go2Top" class="fas fa-arrow-up goTop" style="opacity: 0; cursor: pointer;"></button>
         <!-- GoTop -->
 
         <!-- Footer -->
