--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
     <body>
         <!-- Menu -->
-        <nav class="grid-item">
+        <nav id="menu" class="grid-item">
             <a href="" class="logo">SolarEnergia</a>
             <button class="menu-toggler">
                 <span></span>
@@ -181,7 +181,7 @@
         <!-- Contact -->
 
         <!-- GoTop -->
-        <button id="go2Top" class="fas fa-arrow-up goTop" style="opacity: 0; cursor: pointer;"></button>
+        <button id="go2Top" class="fas fa-arrow-up goTop" style="cursor: pointer;"></button>
         <!-- GoTop -->
 
         <!-- Footer -->
