--- a/article.html
+++ b/article.html
@@ -67,7 +67,7 @@
     <!-- Footer -->
     
     <!-- GoTop -->
-    <div class="goTop "><i class="fas fa-arrow-up goTop"></i></div>
+    <button id="go2Top" class="fas fa-arrow-up goTop" style="cursor: pointer;"></button>
     <!-- GoTop -->
 
     <!-- Scripts -->
