--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- Menu -->
-    <nav class="grid-item">
+    <nav id="menu" class="grid-item">
         <a href="" class="logo">SolarEnergia</a>
         <button class="menu-toggler">
             <span></span>
