--- a/article.html
+++ b/article.html
@@ -9,6 +9,7 @@
     <title>SolarEnergia - Odnawialne źródła energii - Home</title>
     <!-- Styles -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel='stylesheet' id='google-fonts-css'  href='https://fonts.googleapis.com/css2?family=Roboto+Slab&#038;display=swap&#038;ver=5.5.1' type='text/css' media='all' />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- My Styles -->
