--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel='stylesheet' id='google-fonts-css'  href='https://fonts.googleapis.com/css2?family=Roboto+Slab&#038;display=swap&#038;ver=5.5.1' type='text/css' media='all' />
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Italianno&family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- My Styles -->
