--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             </button>
             <div class="navbar-menu">
                 <a href="index.html#home">Strona główna</a>
-                <a href="index.html#main">O nas</a>
-                <a href="index.html#blog">Blog</a>
+                <a href="index.html#main">Cennik</a>
                 <a href="index.html#gallery">Galeria</a>
                 <a href="index.html#contact">Kontakt</a>
             </div>
@@ -39,8 +38,8 @@
         <!-- Baner -->
         <header id="home" class="grid-item">
             <div class="text-holder">
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <h1>Zapraszamy do Gliczarowa</h1>
+                <h2>OFERTA DLA GRUP OD 42 zł</h2>
             </div>
             <span class="arrowbox" onclick="location.href='#main'">
                 <a href="#main">
@@ -54,63 +53,31 @@
         <!-- About -->
         <main id="main" class="grid-item">
             <div class="energy">
-                <div class="photo"><img src="img/photo1.png" alt="ENERGIA-WIATROWA"></div>
+                <div class="photo"><img src="http://uskupniow.pl/pokoje/domn.jpg" alt="ENERGIA-WIATROWA"></div>
                 <div class="desc">
                 <span>Lorem</span>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque iure, officiis exercitationem explicabo laborum quasi ipsa consequatur alias obcaecati nemo possimus ea esse repellendus quam non fugiat neque repellat ipsam, ab voluptate, nesciunt quod eius? Sunt voluptatibus molestias et impedit!</p>
-                <a href="#">Read more.</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa vero vel.</p>
+                <a href="#">Więcej</a>
                 </div>
             </div>
             <div class="energy right dark">
-                <div class="photo"><img src="img/photo2.jpg" alt="BIOGAZOWNIE"></div>
+                <div class="photo"><img src="http://uskupniow.pl/pokoje/jadalniad.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
                 <span>Ipsum</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
-                <a href="#">Read more.</a>
+                <a href="#">Więcej</a>
                 </div>
             </div>
             <div class="energy">
-                <div class="photo"><img src="img/photo3.jpg" alt="OSWIETLENIA-SOLARNE"></div>
+                <div class="photo"><img src="http://uskupniow.pl/pokoje/3d.jpg" alt="OSWIETLENIA-SOLARNE"></div>
                 <div class="desc">
                 <span>Lorem</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore blanditiis natus amet, totam aperiam similique deserunt at maiores perspiciatis, possimus dolorum vero qui deleniti praesentium sunt cupiditate a. Sapiente cupiditate illum, minima modi facilis, ea maxime labore nostrum quidem eaque mollitia dolorum repellat magnam molestiae exercitationem corrupti libero, non eveniet?</p>
-                <a href="#">Read more.</a>
+                <a href="#">Więcej</a>
                 </div>
             </div>
         </main>
         <!-- About -->
-
-        <!-- Blog -->
-        <aside id="blog" class="grid-item dark">
-            <span class="section-title">Blog</span>
-            <div class="myborder"></div>
-                <!-- Article 1 -->
-                <article>
-                    <div style="background-image: url(img/photo1.png); background-size: cover;" class="article-content">
-                        <div class="slider">
-                        <span>Lorem</span>
-                        </div>
-                        <div class="info">
-                        <span>Lorem</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, corporis cupiditate voluptatibus magnam maxime incidunt ratione impedit exercitationem at sunt blanditiis ipsum, nemo odit praesentium qui a ad molestias officia architecto, delectus iure in cumque tempore facere! Possimus voluptatibus aliquid laboriosam dolor eveniet quos, ab provident modi inventore libero tempore atque quam accusantium laborum sapiente, id vero tenetur odio at repellendus recusandae? Eligendi minima reiciendis voluptate delectus veniam magnam incidunt!</p>
-                        <a href="article.html">Czytaj dalej</a>
-                        </div>
-                    </div>
-                    <!-- Article 1 -->
-                    <div style="background-image: url(img/photo2.jpg); background-size: cover;" class="article-content">
-                        <div class="slider">
-                            <span>Ipsum</span>
-                        </div>
-                        <div class="info">
-                        <span>Ipsum</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur deleniti architecto modi, expedita labore delectus harum inventore consequatur nemo molestiae maiores iste distinctio quidem aliquam, illo exercitationem deserunt eius. Velit similique, suscipit tenetur aliquid magni iure recusandae totam expedita dolorem autem ex possimus reiciendis. Quasi distinctio laborum magni enim, aperiam amet molestiae modi iusto quidem corrupti et sapiente tenetur esse!</p>
-                        <a href="">Czytaj dalej</a>
-                        </div>
-                    </div>
-                </article>
-            <a href="#" class="see-all">Zobacz wszystkie artykuły.</a>
-        </aside>
-        <!-- Blog -->
 
         <!-- Gallery -->
         <section id="gallery" class="grid-item gallery">
@@ -119,22 +86,22 @@
                 <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-1">
+                        <img src="http://uskupniow.pl/pokoje/pokoj1d.jpg" alt="FRONT-PAGE-PHOTO-1">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-2">
+                        <img src="http://uskupniow.pl/pokoje/pokoj2d.jpg" alt="FRONT-PAGE-PHOTO-2">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-3">
+                        <img src="http://uskupniow.pl/pokoje/pokoj1d.jpg" alt="FRONT-PAGE-PHOTO-3">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-4">
+                        <img src="http://uskupniow.pl/pokoje/bilardd.jpg" alt="FRONT-PAGE-PHOTO-4">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo2.jpg" alt="FRONT-PAGE-PHOTO-5">
+                        <img src="http://uskupniow.pl/pokoje/tenisd.jpg" alt="FRONT-PAGE-PHOTO-5">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="img/photo1.png" alt="FRONT-PAGE-PHOTO-6">
+                        <img src="http://uskupniow.pl/galeria/5.jpg" alt="FRONT-PAGE-PHOTO-6">
                     </div>
                 </div>
             </div>
